--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ coverage/
 .env.development.local
 .env.test.local
 .env.production.local
+.wav
 
 # Files that should NOT be included.
 npm-debug.log*
