--- a/site-react/package.json
+++ b/site-react/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-watson-mysql",
-  "version": "0.1.0",
+  "name": "site-react",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
