--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ coverage/
 .env.development.local
 .env.test.local
 .env.production.local
-.wav
+*.wav
 
 # Files that should NOT be included.
 npm-debug.log*
