--- a/node-rest-mysql-watson/package.json
+++ b/node-rest-mysql-watson/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "A example of Node.js, Rest APIs and MySQL integration",
   "main": "server.js",
+  "engines": {
+    "node": ">=14.15.4"
+  },
   "scripts": {
     "start": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
